# Metronome

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.quail/: cmake.txt  quail.txt  shared.txt
.quail/cmd/: exe_with_res.ps1
cmake/: CPM.cmake  properties.cmake
dependencies/: CMakeLists.txt
dependencies/margs/: LICENSE.txt
dependencies/margs/include/margs/: arg_value.hpp  args_exception.hpp  args_map.hpp  basic_arg.hpp  basic_args_analizer.hpp  basic_args_builder.hpp  decoder.hpp  help_message.hpp  margs.hpp  margs_config.hpp  margs_libs.hpp  margs_types.hpp
dependencies/mstd/: LICENSE.txt
dependencies/mstd/include/mstd/: arithmetic.hpp  arithmetic_libs.hpp  arithmetic_types.hpp  as_function.hpp  bit_operations.hpp  containers.hpp  containers_libs.hpp  containers_types.hpp  function_traits.hpp  functions.hpp  functions_libs.hpp  is_callable.hpp  is_same_function.hpp  isstrnum.hpp  macros.hpp  mat.hpp  math_functions.hpp  mstd.hpp  mstd_config.hpp  mstd_libs.hpp  ordered_map.hpp  ordered_set.hpp  overflow_operations.hpp  quat.hpp  string.hpp  string_libs.hpp  string_types.hpp  strtonum.hpp  terminal.hpp  terminal_libs.hpp  vec.hpp
dependencies/ogg/lib/debug/: ogg.lib
dependencies/ogg/lib/release/: ogg.lib
dependencies/ogg/shared/release/: ogg.lib
dependencies/opus/lib/release/: opus.lib
dependencies/opus/shared/: libopus-0.lib
dependencies/opus/static/debug/: opus.lib
dependencies/opusfile/lib/debug/: opusfile.lib
dependencies/opusfile/lib/release/: opusfile.lib
dependencies/opusfile/shared/: opusfile.lib
dependencies/opusfile/static/debug/: opusfile.lib
dependencies/opusfile/static/release/: opusfile.lib
extra/audio/01/: license.txt
extra/audio/02/: license.txt
extra/audio/03/: license.txt
extra/audio/04/: license.txt
extra/audio/05/: license.txt
extra/audio/06/: license.txt
extra/audio/07/: license.txt
extra/audio/08/: license.txt
extra/audio/09/: license.txt
notes/: Compiling OPENAL statically Win.md  Compiling OPUSFILE on Windows.md
project/bluelib/inc/blue/: memory.hpp  memory_exit.hpp  wave.hpp
project/metronome/: CMakeLists.txt
project/metronome/inc/: arguments.hpp  audio.hpp  bluelib.hpp  global.hpp  opus.hpp  resources.hpp  threads.hpp  version.hpp
project/metronome/res/base/: 01_.opus  02_.opus  03a.opus  03b.opus  04a.opus  04b.opus  05_.opus  06_.opus  07_.opus  08_.opus  09_.opus
project/metronome/src/: main.cpp
