include (CPM)

#FetchContent_Declare (
#	margs
#	GIT_REPOSITORY https://github.com/MAIPA01/margs.git
#	GIT_TAG main
#)
#FetchContent_MakeAvailable (margs)

#CPMAddPackage (
#    NAME margs
#    GIT_REPOSITORY https://github.com/MAIPA01/margs.git
#    GIT_TAG v1.0.0
#)

#target_compile_options (TracyClient PUBLIC -Wno-format)